<resources>
    <string name="app_name">Pesquisa_Eleitoral</string>


    <!--Standard-->
    <string name="btn_confirmar">Confirmar</string>
    <string name="btn_voltar">Voltar</string>

    <!--LOGIN-->
    <string name="login_img_contentDescription">Imagem de uma urna com edições que a tornam "fofa"</string>

    <string name="login_txt_email">Email: </string>
    <string name="login_txt_senha">Senha: </string>

    <string name="login_hint_email">exemplo@gmail.com</string>

    <string name="login_btn_acessar">ACESSAR</string>
    <string name="login_btn_encerrar">ENCERRAR</string>


    <!--MENU_PESQUISAS-->
    <string name="pesquisas_txt_eleicao">ELEIÇÕES 2026</string>
    <string name="pesquisas_txt_pesquisas">PESQUISA DE INTENÇÃO</string>

    <string name="pesquisas_btn_comecar">COMEÇAR PESQUISA</string>
    <string name="pesquisas_btn_finalizar">FINALIZAR</string>


    <!--PESQUISA_ESPONTANEA-->
    <string name="espontanea_txt_titulo">PESQUISA ESPONTÂNEA</string>
    <string name="espontanea_txt_candidato">Candidato:</string>


    <!--CANDIDATO-->
    <string name="candidato_img_ContentDescription">Imagem do candidato</string>
    <string name="candidato_txt_nome">Candidato</string>
    <string name="candidato_txt_partido">Partido</string>

    <!--PESQUISA_ESTIMULADA-->
    <string name="estimulada_txt_titulo">Pesquisa Estimulada</string>

    <!--PROBLEMAS-->
    <string name="problemas_txt_titulo">Concernimentos</string>

    <!--PROBLEMA-->
    <string name="problema_checkbox_problema">Problema</string>

    <!--FINALIZAR-->
    <string name="finalizar_txt_titulo">DADOS DO ENTREVISTADO</string>

    <string name="finalizar_txt_nome">Nome do Entrevistado: </string>
    <string name="finalizar_hint_nome">Entrevistado</string>

    <string name="finalizar_txt_celular">Celular: </string>
    <string name="finalizar_hint_celular">999999999</string>

    <string name="finalizar_txt_aviso">AVISO: caso o entrevistado não queira se identificar, basta não preencher os campos acima</string>

    <string name="finalizar_btn_finalizar">Finalizar</string>

    <!--MENU RESULTADOS-->
    <string name="menuResultado_txt_titulo">Resultado da Pesquisa</string>
    <string name="menuResultado_txt_qtdPesquisas">Qtd. de pessoas entrevistadas: </string>
    <string name="menuResultado_btn_eleitores">ELEITORES</string>
    <string name="menuResultado_btn_resultados">RESULTADOS</string>
    <string name="menuResultado_btn_limpar">LIMPAR DADOS</string>
    <string name="menuResultado_txt_aviso">AVISO: Ao apertar o botão todos os dados de pesquisa salvos serão apagados salvos serão apagados</string>

    <!--ELEITOR-->
    <string name="eleitor_txt_titulo">Eleitor 1</string>
    <string name="eleitor_txt_nome">Nome do eleitor</string>
    <string name="eleitor_txt_celular">Celular do eleitor</string>
    <string name="eleitor_txt_datahora">Data e hora da pesquisa</string>
    <string name="eleitor_txt_latitude">Latitude</string>
    <string name="eleitor_txt_longitude">Longitude</string>

    <!--ELEITORES-->
    <string name="eleitores_txt_titulo">Entrevistados</string>

    <!--RESULTADOS-->
    <string name="resultados_txt_titulo">Resultados</string>


</resources>