<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/eleitor_txt_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/eleitor_txt_titulo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:id="@+id/eleitor_txt_nome"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:text="@string/eleitor_txt_nome"
                android:textColor="@color/blue"
                android:textSize="16sp"
                android:layout_marginBottom="3dp"/>

            <TextView
                android:id="@+id/eleitor_txt_celular"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:text="@string/eleitor_txt_celular"
                android:textColor="@color/blue"
                android:layout_marginBottom="3dp"/>

            <TextView
                android:id="@+id/eleitor_txt_datahora"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:text="@string/eleitor_txt_datahora"
                android:textColor="@color/blue"
                android:layout_marginBottom="3dp"/>

            <TextView
                android:id="@+id/eleitor_txt_latitude"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:text="@string/eleitor_txt_latitude"
                android:textColor="@color/blue"
                android:layout_marginBottom="3dp"/>
            <TextView
                android:id="@+id/eleitor_txt_longitude"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:text="@string/eleitor_txt_longitude"
                android:textColor="@color/blue"
                android:layout_marginBottom="3dp"/>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>