<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FinalizarActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="30dp"
        android:orientation="vertical"
        android:paddingTop="100dp"
        tools:layout_editor_absoluteX="-8dp"
        tools:layout_editor_absoluteY="108dp">

        <TextView
            android:id="@+id/finalizar_txt_titulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="100dp"
            android:text="@string/finalizar_txt_titulo"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/finalizar_txt_nome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="5dp"
            android:text="@string/finalizar_txt_nome"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/finalizar_ed_nome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="30dp"
            android:ems="10"
            android:hint="@string/finalizar_hint_nome"
            android:inputType="text" />

        <TextView
            android:id="@+id/finalizar_txt_celular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="5dp"
            android:text="@string/finalizar_txt_celular"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/finalizar_ed_celular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="30dp"
            android:ems="10"
            android:hint="@string/finalizar_hint_celular"
            android:inputType="phone" />

        <Button
            android:id="@+id/finalizar_btn_finalizar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="90dp"
            android:layout_marginEnd="90dp"
            android:text="@string/finalizar_btn_finalizar" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>