<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/candidato"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/candidato_img"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:contentDescription="@string/candidato_img_ContentDescription"
            tools:srcCompat="@tools:sample/avatars"
            android:layout_marginEnd="6dp"
            />

        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="8dp">

            <TextView
                android:id="@+id/candidato_txt_nome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/candidato_txt_nome" />

            <TextView
                android:id="@+id/candidato_txt_partido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="@string/candidato_txt_partido" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>